# aichat

./: .gitignore  AI_ASSISTANT_2025_ROADMAP.md  AI_ASSISTANT_ENHANCEMENTS.md  AI_ASSISTANT_PROJECT_PLAN.md  AUTORAG_OPTIMIZATION_SUMMARY.md  CLOUD_SETUP.md  QUICK_START.md  README.md  XGAMING_CHAT_ENHANCEMENT_PLAN.md  package.json  start-app.sh
backend/: .env.example  Dockerfile.simple  ENVIRONMENT_SETUP.md  pyproject.toml  requirements.txt  requirements_clean.txt  requirements_docker.txt  test_performance.py
backend/alembic/versions/: 001_create_chat_persistence_tables.sql
backend/app/: add_langgraph_route.py  server.py
backend/app/api/: __init__.py  auth.py  cache_management.py  chat_persistence.py
backend/app/crawled_docs/: arma_reforger_server_setup.md  cs2_dedicated_servers.md  minecraft_server_setup_guide.md  paper_mc_documentation.md  paper_server_setup.md  pterodactyl_panel_installation.md  pterodactyl_panel_main.md  pterodactyl_wings.md  rust_server_setup.md  spigot_installation_guide.md  unknown.md
backend/app/langgraph/: agent.py  state.py  tools.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: chat.py
backend/app/scripts/: populate_autorag.py
backend/app/services/: __init__.py  cache_service.py  chat_persistence.py  cloudflare_autorag.py  firecrawl_service.py  local_docs_fallback.py  pterodactyl_admin_client.py  pterodactyl_client.py  request_deduplicator.py  similarity_cache.py  (+2 more)
backend/scraped_docs_demo/: sample_1_pterodactyl_panel_main.md  sample_2_pterodactyl_panel_installation.md  sample_3_pterodactyl_wings.md
(+53 files in other folders)
